--- a/style.css
+++ b/style.css
@@ -270,11 +270,6 @@ section{
   flex-direction: column;
 }
 
-/* .about-container,
-.about-details-container{
-  display: flex;
-} */
-
 .about-pic{
   border-radius: 2rem;
 }
@@ -304,6 +299,10 @@ section{
   height: 400px;
   width: 400px;
   margin: auto 0;
+}
+
+.section-container h2{
+  margin-top: 10%;
 }
 
 /* Experience Section */
